--- a/components/LoginForm/LoginForm.module.css
+++ b/components/LoginForm/LoginForm.module.css
@@ -18,7 +18,7 @@
 }
 
 .errorMessage {
-  font-size: 0.6rem;
+  font-size: 0.7rem !important;
   font-weight: 400;
   letter-spacing: 1px;
   margin: 1px 0 1px 0;
