--- a/components/common/Layout/Layout.module.css
+++ b/components/common/Layout/Layout.module.css
@@ -4,3 +4,15 @@
   justify-content: space-between;
   min-height: 100vh;
 }
+
+.root {
+  min-height: 80vh;
+  background-color: #e9edf1;
+  display: flex;
+  flex-direction: row;
+}
+
+.dashboard {
+  width: 100%;
+  margin: 2rem;
+}
