--- a/components/File/File.module.css
+++ b/components/File/File.module.css
@@ -1,4 +1,6 @@
 .root {
+  /* position: absolute;
+  position: 999; */
   margin-bottom: 4px;
   padding: 0.2rem 0.6rem 0.2rem 0.6rem;
   color: #999999;
