Fixed drag and drop logic. Still missing to fix some styling.

--- a/components/FileManager/FileManager.module.css
+++ b/components/FileManager/FileManager.module.css
@@ -6,6 +6,21 @@
   /* position: relative; */
 }
 
+.root div {
+  width: 50%;
+  height: 100%;
+  padding: 2rem;
+  overflow: auto;
+}
+
+.root div:first-of-type {
+  background-color: #e7ffff;
+}
+
+.root div:last-of-type {
+  background-color: #fde4e8;
+}
+
 .filesPanel,
 .trashPanel {
   width: 50%;
