--- a/components/Input/Input.module.css
+++ b/components/Input/Input.module.css
@@ -1,6 +1,12 @@
 .inputContainer {
-  display: inline-block;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
+}
+
+.inputContainer label {
+  margin-right: 4px;
 }
 
 .input {
