--- a/components/common/Usernav/Usernav.module.css
+++ b/components/common/Usernav/Usernav.module.css
@@ -27,6 +27,7 @@
   height: 150px;
   margin-bottom: 2rem;
   background-color: antiquewhite;
+  border: 1px solid #8800c7;
   border-radius: 100%;
 }
 
