--- a/components/SettingsOptions/SettingsOptions.module.css
+++ b/components/SettingsOptions/SettingsOptions.module.css
@@ -1,9 +1,8 @@
 .root {
-  width: 50%;
+  width: 20%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
   justify-content: space-between;
   margin: 0 2rem 0 2rem;
   color: #1c1d1f;
@@ -13,10 +12,19 @@
   font-size: 1rem;
   margin-bottom: 1rem;
   font-weight: 500;
+  /* text-align: center; */
+}
+
+.selectionGroup {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 210px;
 }
 
 .upgradeLink {
+  text-align: right;
   cursor: pointer;
-  color: #00ff00;
+  color: #8d8bfa;
   font-weight: 600;
 }
