--- a/components/SettingsOptions/SettingsOptions.module.css
+++ b/components/SettingsOptions/SettingsOptions.module.css
@@ -12,12 +12,12 @@
   font-size: 1rem;
   margin-bottom: 1rem;
   font-weight: 500;
-  /* text-align: center; */
+  text-align: center;
 }
 
 .selectionGroup {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   width: 210px;
 }
