--- a/components/common/Usernav/Usernav.module.css
+++ b/components/common/Usernav/Usernav.module.css
@@ -5,7 +5,6 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  /* border-right: 1px solid #ebebeb; */
 }
 
 .upperGroup {
@@ -26,7 +25,7 @@
   height: 150px;
   margin-bottom: 2rem;
   background-color: antiquewhite;
-  border: 1px solid #8800c7;
+  border: 2px solid #ff69b4;
   border-radius: 100%;
 }
 
