Authentication working. Still needs to protect pages

--- a/components/common/Usernav/Usernav.module.css
+++ b/components/common/Usernav/Usernav.module.css
@@ -23,6 +23,7 @@
 .profileImg {
   width: 150px;
   height: 150px;
+  overflow: hidden;
   margin-bottom: 2rem;
   background-color: antiquewhite;
   border: 2px solid #ff69b4;
