--- a/components/FileManager/FileManager.module.css
+++ b/components/FileManager/FileManager.module.css
@@ -36,3 +36,19 @@
 .trashPanel {
   background-color: #fde4e8;
 }
+
+.loadingMessage {
+  color: black;
+  margin-left: .5rem;
+  font-size: .8rem;
+  animation: fade-in 700ms cubic-bezier(0.25, 0.1, 0.25, 1) infinite;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
