--- a/components/FileManager/FileManager.module.css
+++ b/components/FileManager/FileManager.module.css
@@ -37,11 +37,18 @@
   background-color: #fde4e8;
 }
 
-.loadingMessage {
-  color: black;
+.modalMessage {
   margin-left: .5rem;
   font-size: .8rem;
+}
+
+.loadingMessage {
+  color: blueviolet;
   animation: fade-in 700ms cubic-bezier(0.25, 0.1, 0.25, 1) infinite;
+}
+
+.errorMessage {
+  color: red;
 }
 
 @keyframes fade-in {
