--- a/components/FileUploader/FileUploader.module.css
+++ b/components/FileUploader/FileUploader.module.css
@@ -49,3 +49,17 @@
 .filesContainer li:hover .trashIcon {
   display: block;
 }
+
+.modalMessage {
+  margin-left: .5rem;
+  font-size: .8rem;
+}
+
+.loadingMessage {
+  color: blueviolet;
+  animation: fade-in 700ms cubic-bezier(0.25, 0.1, 0.25, 1) infinite;
+}
+
+.errorMessage {
+  color: red;
+}
