--- a/components/Files/Files.module.css
+++ b/components/Files/Files.module.css
@@ -3,7 +3,7 @@
   list-style-type: none;
   padding: 2rem 0 0 0;
   margin-top: 2rem;
-  border-top: 1px solid #cecece;
+  border-top: 1px solid #404040;
   overflow: auto;
   /* Firefox */
   scrollbar-width: auto;
@@ -18,12 +18,6 @@ width: 12px;
 }
 
 .root::-webkit-scrollbar-thumb {
-  background-color: #bcb8bd;
-  border-radius: 10px;
-  border: 2px solid #FFFFFF;
-}
-
-.buttonsGroup {
-  display: flex;
-  height: 100px;
+  background-color: #313131;
+  border-radius: 12.5px;
 }
