--- a/components/SettingsForm/SettingsForm.module.css
+++ b/components/SettingsForm/SettingsForm.module.css
@@ -5,8 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  border-right: 1px solid #cecece;
-  color: #1c1d1f;
+  border-right: 1px solid #404040;
 }
 
 .form h2 {
