--- a/components/BasicSettings/BasicSettings.module.css
+++ b/components/BasicSettings/BasicSettings.module.css
@@ -1,17 +1,25 @@
-.form {
+.wrapper {
+  display: flex;
   width: 70%;
   height: 100%;
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+}
+
+.form {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
   border-right: 1px solid #404040;
 }
 
-.form h2 {
+.wrapper h2 {
   font-size: 1rem;
   margin-bottom: 1rem;
   font-weight: 500;
+  text-align: center;
 }
 
 .formContainer {
